<resources>
    <string name="app_name">FoodDeliveryDemo</string>

    <string name="text_splash_rfkd">RKFD</string>
    <string name="text_splash_logo"><font color="#2D2D2D">FOOD-</font><font color="#2FDBBC">E</font></string>

    <string name="text_onboard1_title1">awesome\n<font color="#2FDBBC">local </font>food</string>
    <string name="text_onboard1_title2">Discover delicious food from the amazing restaurants near you</string>

    <string name="text_onboard2_title1">DELIVERED AT\nYOUR <font color="#2FDBBC">DOORSTEP</font></string>
    <string name="text_onboard2_title2">Fresh and delicious local food delivered from the restaurants to your doorstep</string>

    <string name="text_onboard3_title1">GRAB THE\nBEST <font color="#2FDBBC">DEALS</font> AROUND</string>
    <string name="text_onboard3_title2">Grab the best deals and discounts around and save on your every order</string>

    <string name="text_get_started_get_started">Get <font color="#2FDBBC">Started</font></string>
    <string name="text_get_started_description">Get started and enjoy the awesome local food right at your home.</string>

    <string name="text_register_login">Already have an account? <font color="#F99928">Login</font></string>

    <string name="text_login_register">Don’t have an account? <font color="#F99928">Register</font></string>

    <string name="text_get_started">get started</string>
    <string name="text_register">register</string>
    <string name="text_next">Next</string>
    <string name="text_login">Login</string>
    <string name="text_phone">Phone</string>
    <string name="hint_phone">+998 93 668 71 18</string>
    <string name="text_password">Password</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_full_name">full name</string>
    <string name="hint_full_name">John Doe</string>
    <string name="text_send_code">send code</string>
    <string name="text_reset_password">We’ll send a password reset link to your number.</string>
    <string name="textVerificationCodeSent">verification code sent</string>
    <string name="textVerificationCode">Verification code</string>
    <string name="text_verify_code">Verify Code</string>
    <string name="text_sent_code">We’ve sent you a verification code with SMS. Check your SMS for the verification code.</string>
    <string name="text_resend">Resend</string>
    <string name="text_did_not_receive">Did not receive the code yet?</string>
    <string name="text_time_0038">00:38</string>
    <string name="textResetPassword">reset password</string>
    <string name="text_new_password">New password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_address_setup">address setup</string>
    <string name="text_add_address">add address</string>
    <string name="text_skip_for_now">Skip for now</string>
    <string name="text_country">Country</string>
    <string name="text_zip_code">ZIP-CODE</string>
    <string name="text_address">Address</string>
    <string name="text_city">City</string>
    <string name="text_hint_zip">000-000</string>
    <string name="text_payment_setup">Payment setup</string>
    <string name="text_add_card">add card</string>
    <string name="text_expiry_date">Expiry Date</string>
    <string name="text_card_number">Card number</string>
    <string name="text_cvv">CVV</string>
    <string name="hint_mm_yy">MM / YY</string>
    <string name="hint_xxxx_xxxx_xxxx">XXXX - XXXX - XXXX</string>
    <string name="hint_x_x_x">X X X</string>
    <string name="text_restaurants">Restaurants</string>
    <string name="text_total">total</string>
    <string name="text_proceed_to_checkout">Proceed to checkout</string>
    <string name="text_basket">basket</string>
    <string name="text_liked">liked</string>
    <string name="text_">!</string>
    <string name="text_hello">Hello,</string>
    <string name="low_high_cost">Low-High(Cost)</string>
    <string name="high_low_cost">High-Low(Cost)</string>
    <string name="a_z_name">A-Z(Name)</string>
    <string name="z_a_name">Z-A(Name)</string>
    <string name="by_restaurant">by Restaurant</string>

</resources>