<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/gray">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_cancel"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="122dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/text_payment_setup"
        android:textAllCaps="true"
        android:textColor="@color/dark"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddCard"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/text_add_card"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSkipForNow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/buttonSkipForNow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/text_skip_for_now"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/text_expiry_date"
        android:textColor="@color/primary"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextExpiryDate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/text_card_number"
        android:textColor="@color/primary"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editCard"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/text_cvv"
        android:textColor="@color/primary"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_CVV"
        app:layout_constraintStart_toStartOf="@+id/edit_text_CVV" />

    <EditText
        android:id="@+id/editTextExpiryDate"
        android:layout_width="0dp"

        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:autofillHints="postalCode"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/light"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/hint_mm_yy"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="20dp"
        android:textColor="@color/dark"
        android:textColorHint="@color/gray"

        app:layout_constraintBottom_toTopOf="@+id/buttonAddCard"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_CVV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editCard"
        android:layout_width="0dp"

        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:autofillHints="postalAddress"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/light"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/hint_xxxx_xxxx_xxxx"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="20dp"
        android:textColor="@color/dark"
        android:textColorHint="@color/gray"

        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_text_CVV"
        android:layout_width="0dp"

        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="postalAddress"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/light"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/hint_x_x_x"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="20dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"

        app:layout_constraintBottom_toBottomOf="@+id/editTextExpiryDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextExpiryDate"
        app:layout_constraintTop_toTopOf="@+id/editTextExpiryDate" />
</androidx.constraintlayout.widget.ConstraintLayout>