<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uz.gita.fooddeliverydemo.presentation.ui.screen.VerifyScreen"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_cancel"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="122dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/textVerificationCodeSent"
        android:textAllCaps="true"
        android:textColor="@color/dark"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="341dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/textVerificationCode"
        android:textColor="@color/primary"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCode"
        android:layout_width="0dp"

        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="password"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/light"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="start|center_vertical"
        android:hint="@string/textVerificationCode"
        android:inputType="number"
        android:maxLength="6"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="20dp"
        android:textColor="@color/dark"
        android:textColorHint="@color/gray"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonVerifyCode"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/background_button_selector"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/text_verify_code"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_sent_code"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/editTextCode"
        app:layout_constraintStart_toStartOf="@+id/editTextCode"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/buttonResend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_resend"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/buttonVerifyCode"
        app:layout_constraintEnd_toEndOf="@+id/buttonVerifyCode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonVerifyCode" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_did_not_receive"
        android:textColor="@color/dark"
        app:layout_constraintBottom_toTopOf="@+id/buttonResend"
        app:layout_constraintEnd_toEndOf="@+id/editTextCode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonVerifyCode" />

    <TextView
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/text_time_0038"
        android:textColor="@color/secondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="@+id/editTextCode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonVerifyCode" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loader"
        style="@android:style/Widget.Material.ProgressBar.Small"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:theme="@style/ProgressColored"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>