<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.screen.ForgotPasswordScreen"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_cancel"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="122dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/text_forgot_password"
        android:textAllCaps="true"
        android:textColor="@color/dark"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="341dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/text_phone"
        android:textColor="@color/primary"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="phone"
        android:background="@drawable/default_edit_text"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="start|center_vertical"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:maxLength="13"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="20dp"
        android:textColor="@color/dark"
        android:textColorHint="@color/gray"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_send_code"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_button_selector"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/text_send_code"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_reset_password"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loader"
        style="@android:style/Widget.Material.ProgressBar.Small"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:theme="@style/ProgressColored"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>